--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,11 @@ jobs:
           issue: ${{ steps.pr.outputs.issue }}
           message-path: 
             report.md
+      - uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: report.md
       #trying to download report.md as artifact to send it to main branch
       - uses: actions/download-artifact@v3
         with:
-          name: report.md
+          name: my-artifact
