--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
 on:
   pull_request:
     types: [opened, reopened, edited]
+    branches:
+      - 'main'
   push:
     branches:
-      - 'dev1'
+      - 'dev/**'
     
 name : pullrequesttrigger
 
