--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
     types: [opened, reopened, edited]
   push:
     branches:
-      - 'dev1'
+      - 'dev-3-pull-reg-wrkflw-trgger'
     
 name : pullrequesttrigger
 
